[gd_scene load_steps=6 format=3 uid="uid://bgsm7u7g12p0x"]

[ext_resource type="Script" uid="uid://dbyjmm7n2y52c" path="res://Scenes/Card.gd" id="1_card_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.12, 0.12, 0.18, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.7, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 20
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(1, 0.7, 0.1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.5, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.8, 0.5, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.4, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(1, 0.8, 0.3, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.6, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(280, 400)
offset_right = 280.0
offset_bottom = 400.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1_card_script")

[node name="CardVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CardNameLabel" type="Label" parent="CardVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 24
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator1" type="HSeparator" parent="CardVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BonusSection" type="VBoxContainer" parent="CardVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="BonusTitle" type="Label" parent="CardVBox/BonusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "BONUSES"
horizontal_alignment = 1

[node name="BonusContainer" type="VBoxContainer" parent="CardVBox/BonusSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="CardVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MalusSection" type="VBoxContainer" parent="CardVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="MalusTitle" type="Label" parent="CardVBox/MalusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "PENALTIES"
horizontal_alignment = 1

[node name="MalusContainer" type="VBoxContainer" parent="CardVBox/MalusSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="HSeparator3" type="HSeparator" parent="CardVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectButton" type="Button" parent="CardVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.1, 0.1, 0.15, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.05, 0.05, 0.1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
toggle_mode = true
text = "SELECT"
